# mcp_opensearch

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
mcp_opensearch/: __init__.py  agent_server.py  log_tools.py  opensearch_tools.py  report_tools.py  utils.py
tests/: test_log_tools.py  test_opensearch_tools.py
